fix: prevent overflow on iOS and take safe-area into account

--- a/src/index.css
+++ b/src/index.css
@@ -10,8 +10,14 @@ html {
   box-sizing: inherit;
 }
 
+html,
+body,
+#root,
 body > #root > div {
-  height: 100vh;
+  height: 100%;
+}
+
+body > #root > div {
   overflow: hidden;
   -ms-overflow-style: none;
   scrollbar-width: none;
